--- a/pheno_import_project_DEFAULT.yaml
+++ b/pheno_import_project_DEFAULT.yaml
@@ -13,7 +13,7 @@ pedigree: pedigree.ped
 
 person_column: personId
 
-output_dir: output
+work_dir: work
 
 study_config:
   regressions:
@@ -23,3 +23,9 @@ study_config:
       instrument_name: instrument_1
       jitter: 0.1
       display_name: "Regression one"
+
+gpf_instance:
+  path: minimal_pheno_instance/gpf_instance.yaml
+
+destination:
+  storage_id: storage1
