--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@ work
 .task-log
 minimal_pheno_instance/cache
 minimal_pheno_instance/pheno
+minimal_pheno_instance/pheno_images
 minimal_pheno_instance/pheno_storage_1_dir
