--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ minimal_pheno_instance/cache
 minimal_pheno_instance/pheno
 minimal_pheno_instance/pheno_images
 minimal_pheno_instance/pheno_storage_1_dir
+about_description.md
+main_description.md
